Fixed issues with whitespace padding and added show password.

--- a/styles/main.css
+++ b/styles/main.css
@@ -7,19 +7,19 @@
  */
 
 @font-face {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Roboto'), local('Roboto-Regular'), url(../images/fonts/roboto-normal.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+	font-family: 'Roboto';
+	font-style: normal;
+	font-weight: 400;
+	src: local('Roboto'), local('Roboto-Regular'), url(../images/fonts/roboto-normal.woff2) format('woff2');
+	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
 @font-face {
-  font-family: 'Roboto';
-  font-style: italic;
-  font-weight: 400;
-  src: local('Roboto Italic'), local('Roboto-Italic'), url(../images/fonts/roboto-italic.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+	font-family: 'Roboto';
+	font-style: italic;
+	font-weight: 400;
+	src: local('Roboto Italic'), local('Roboto-Italic'), url(../images/fonts/roboto-italic.woff2) format('woff2');
+	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
 @keyframes glow {
@@ -63,7 +63,7 @@ label {
 	counter-increment: steps;
 }
 
-label:before {
+label:not(.checkbox):before {
 	position: absolute;
 	top: 1em;
 	left: -3em;
@@ -87,7 +87,7 @@ label.inline {
 	margin-right: 1em;
 }
 
-label span {
+label:not(.checkbox) span {
 	display: block;
 	margin-bottom: 0.2em;
 }
@@ -106,7 +106,7 @@ label textarea {
 	transition: all 0.3s;
 }
 
-label input {
+label input:not([type=checkbox]) {
 	min-width: 400px;
 }
 
